# napalm-ros

./: .bumpversion.cfg  .gitignore  .pylintrc  .travis.yml  AUTHORS  Pipfile  README.md  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS.md  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/workflows/: ci.yml  release.yml
napalm_ros/: __init__.py  query.py  ros.py  utils.py
test/api/: test_api.py  test_connections.py  test_librouteros.py
test/unit/: TestROSDriver.py  conftest.py  test_functions.py
test/unit/mocked_data/cli_output/: ip_neighbor_print_without-paging_terse.out
test/unit/mocked_data/test_get_arp_table_with_vrf/normal/: _ip_arp_print.json  _ip_route_vrf_print.json  expected_result.json
test/unit/mocked_data/test_get_bgp_neighbors/routing-disabled/: _system_package_print_without-paging_terse  expected_result.json
test/unit/mocked_data/test_get_bgp_neighbors_detail/routing-disabled/: expected_result.json
test/unit/mocked_data/test_get_environment/no-fans/: _system_health_print_without_paging  expected_result.json
test/unit/mocked_data/test_get_lldp_neighbors/normal/: _ip_neighbor_print_without-paging_terse  expected_result.json
test/unit/mocked_data/test_get_ntp_peers/static-ip/: _system_ntp_client_print.json  expected_result.json
test/unit/mocked_data/test_get_ntp_peers/with-dns/: _system_ntp_client_print.json  expected_result.json
test/unit/mocked_data/test_get_ntp_servers/ip_only/: expected_result.json
test/utils/: test_utils.py
tests/unit/: TestROSDriver.py  conftest.py  test_getters.py
tests/unit/mocked_data/test_get_arp_table_with_vrf/normal/: _ip_arp_print.json  _ip_route_vrf_print.json
tests/unit/mocked_data/test_get_bgp_neighbors/ipv4-only/: _routing_bgp_advertisements_print.json  expected_result.json
tests/unit/mocked_data/test_get_bgp_neighbors_detail/normal/: _routing_bgp_advertisements_print.json  _routing_bgp_instance_print.json  _routing_bgp_peer_print.json  expected_result.json
tests/unit/mocked_data/test_get_config/v6/: _system_package_update_print.json  expected_result.json
tests/unit/mocked_data/test_get_config/v7/: _system_package_update_print.json
tests/unit/mocked_data/test_get_config_filtered/no_test_case_found/: expected_result.json
tests/unit/mocked_data/test_get_config_filtered/v6/: _export.json  expected_result.json
tests/unit/mocked_data/test_get_config_filtered/v7/: expected_result.json  ssh_exec_export_terse_show_sensitive_stdout
tests/unit/mocked_data/test_get_config_sanitized/default/: expected_result.json
tests/unit/mocked_data/test_get_config_sanitized/v6/: _file_print.json
tests/unit/mocked_data/test_get_config_sanitized/v7/: _file_remove.json  expected_result.json
tests/unit/mocked_data/test_get_environment/CCR2004-16G-2S+/: _system_health_print.json  _system_resource_cpu_print.json  _system_resource_print.json  expected_result.json
tests/unit/mocked_data/test_get_environment/v6/: expected_result.json  (+2 more)
tests/utils/: test_utils.py
(+29 files in other folders)
