[build-system]
requires = ["setuptools>=56.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napalm-ros"
version="1.2.2"
description="Network Automation and Programmability Abstraction Layer driver for Mikrotik ROS"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Åukasz Kostka", email="lukasz.g.kostka@gmail.com" },
]

[project.urls]
"Homepage" = "https://github.com/napalm-automation-community/napalm-ros"
"Bug Tracker" = "https://github.com/napalm-automation-community/napalm-ros/issues"

[project.optional-dependencies]
tests = [
  'platformdirs',
  'pytest==7.1.2',
  'yapf',
  'pylint>=2.16.2',
  'isort',
  'toml',
]
