[build-system]
requires = ["setuptools>=56.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "napalm-ros"
version="1.2.6"
description="Network Automation and Programmability Abstraction Layer driver for Mikrotik ROS"
readme = "README.md"
authors = ["Łukasz Kostka <lukasz.g.kostka@gmail.com>"]
license = "GPL-2.0-or-later"
documentation="https://github.com/napalm-automation-community/napalm-ros"
repository="https://github.com/napalm-automation-community/napalm-ros/issues"
keywords=[
  "mikrotik",
  "routeros",
  "api",
  "napalm",
]

[tool.poetry.dependencies]
python = "^3.7.2"
napalm = "^4.0.0"
librouteros = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"
yapf = "^0.40.1"

[tool.yapf]
based_on_style = "pep8"
split_before_logical_operator = true
align_closing_bracket_with_visual_indent = true
blank_line_before_nested_class_or_def = true
blank_lines_around_top_level_definition = 2
column_limit = 140
dedent_closing_brackets = true
coalesce_brackets = false
each_dict_entry_on_separate_line = true
indent_dictionary_value = false
split_arguments_when_comma_terminated = true

[tool.ruff]
line-length = 160
